Fix text overflow in `card__title`

--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,10 +1,11 @@
 .card__title {
-  /* TODO: remove max-width and max-height when JS is added */
-  max-width: 190px;
-  max-height: 29px;
   margin: 0;
   font-size: 24px;
   font-weight: 900;
   line-height: 1.21;
   color: #000;
+  max-width: 190px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
